@@ -31,7 +31,7 @@ static const poly_param_t prebuilt_params_deg5[] = {
 
 	/* shamelessly stolen from GGNFS */
 
-	{100, 5.56E+014, 2.86E+013, 2.80E-009, 23 * 60},
+	{ 99, 5.56E+014, 2.86E+013, 2.80E-009, 23 * 60},
 	{101, 8.13E+014, 4.08E+013, 2.50E-009, 24 * 60},
 	{102, 1.19E+015, 5.82E+013, 2.21E-009, 25 * 60},
 	{103, 1.74E+015, 8.31E+013, 1.94E-009, 26 * 60},
